tests/golden/type_errors/lambda_direct_wrong_arity.cd
print (fun (x) {
  return x;
})(1, 2);
